2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-sbc as used by bluez-gnome
	for the SBC decoder

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Sebastien Bacher
	<seb128@ubuntu.com> to add audio/ogg as a supported mime-type
	(Closes: #469525)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (skip_forward_action_callback),
	(skip_backwards_action_callback):
	* src/totem.c: (totem_seek_time_rel), (totem_action_seek_relative),
	(totem_action_seek_time), (totem_action_remote),
	(totem_action_handle_key_release), (totem_action_handle_seek),
	(totem_action_handle_key_press), (totem_action_handle_scroll):
	* src/totem.h: Clean up the seek to time functions, and don't
	set the statusbar or the full screen label as seeking when
	there's no MRL loaded (Closes: #469413)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: Patch from the Cygwin Ports maintainer to make
	the nautilus extension compilable under Cygwin (Closes: #470011)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_construct):
	Patch from Jaap A. Haitsma <jaap@haitsma.org> the plugin viewer to
	show an icon for the about dialogue (Closes: #470019)

2007-08-23  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free):
	Don't umount CDs/DVDs when we're freeing the cache, gnome-vfs will
	eject them (Closes: #469636)

2007-08-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state),
	(totem_embedded_construct): Inhibit the screensaver when playback is
	ongoing (Closes: #425469)

2007-08-22  Sebastien Bacher  <seb128@ubuntu.com>

	* src/plugins/screensaver/totem-screensaver.c:
	(totem_screensaver_update_from_state), (impl_activate),
	(impl_deactivate): stop the screensaver when playing, not only when 