@@ -1,5 +1,11 @@
 2007-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-preferences.c: (totem_setup_preferences):
+	Work-around no visuals showing up in the visuals combo box, see
+	http://bugzilla.gnome.org/show_bug.cgi?id=470243 for details
+
+2007-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* data/mime-type-list.txt: Add audio/x-sbc as used by bluez-gnome
 	for the SBC decoder
 
